# nr

./: README.md  pyproject.toml
nr/: hooks.py  install.py
nr/fixtures/: custom_field.json
nr/nr/doctype/nr_checkin_import/: nr_checkin_import.js  nr_checkin_import.json  nr_checkin_import.py  test_nr_checkin_import.py
nr/nr/doctype/nr_checkins/: nr_checkins.js  nr_checkins.json  nr_checkins.py  test_nr_checkins.py  utils.py
nr/nr/doctype/nr_item_import/: nr_item_import.js  nr_item_import.json  nr_item_import.py  test_nr_item_import.py
nr/nr/doctype/nr_sales_import/: nr_sales_import.js  nr_sales_import.json  nr_sales_import.py  test_nr_sales_import.py
nr/nr/doctype/nr_settings/: nr_settings.js  nr_settings.json  nr_settings.py  test_nr_settings.py
nr/nr/doctype/nr_stock_entry_import/: nr_stock_entry_import.js  (+3 more)
nr/nr_api/: lazada.py
nr/nr_company/: nakorn.py  tor.py
nr/nr_services/: item_import.py  sales_import.py  sales_import_steel.py  stock_entry_import.py
nr/nr_services/checkin_import/: nakorn.py  tor.py
nr/nr_utils/: _chrome.md  account.py  auto_item_import.py  auto_sales.py  auto_stock_entry_import.py  checkin.py  common.py  company.py  customer.py  delivery_note.py  employee.py  item.py  payment_entry.py  sales_invoice.py  sales_order.py  shift_assignment.py  stock_entry.py  test_auto_item.py  test_auto_sales.py  test_auto_sales_batch.py  test_auto_sales_logic.py  test_checkin.py  test_delivery_note.py  test_item.py  test_payment_entry.py  test_sales_invoice.py  test_sales_order.py  test_stock_entry.py  warehouse.py
nr/www/: test_html.html
(+2 files in other folders)
